Calling g_type_init() is not needed anymore and deprecated since glib version 2.36 and this leads to compiler warnings.
Created attachment 129591 [details] [review] Only call g_type_init() when using an old glib Calling g_type_init() is not needed anymore and deprecated since glib version 2.36.
Comment on attachment 129591 [details] [review] Only call g_type_init() when using an old glib Review of attachment 129591 [details] [review]: ----------------------------------------------------------------- This needs splitting up for the different directories. See the existing log for the commit subject prefixes.
Created attachment 129596 [details] [review] tests: call g_type_init only if using an old glib Calling g_type_init() is not needed anymore and deprecated since glib version 2.36.
Created attachment 129597 [details] [review] main: call g_type_init only if using an old glib Calling g_type_init() is not needed anymore and deprecated since glib version 2.36.
Created attachment 129598 [details] [review] pam: Only call g_type_init when using an old glib Calling g_type_init() is not needed anymore and deprecated since glib version 2.36.
Attachment 129596 [details] pushed as 06ea385 - tests: call g_type_init only if using an old glib Attachment 129597 [details] pushed as 3d2d73d - main: call g_type_init only if using an old glib Attachment 129598 [details] pushed as da87d1d - pam: Only call g_type_init when using an old glib
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.